Fix display alignment bug and add backspace icon img

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 #display {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: flex-end;
     background-color: #BFBF9E;
     width: 250px;
@@ -105,10 +105,15 @@ button.operation {
 }
 
 button.equal {
-    background-color: darkcyan;
+    background-color: #045FB1;
     color: antiquewhite;
     border-radius: 10px;
     border: darkblue solid 5px;
     height: 56px;
     width: 56px;
+}
+
+.backspace {
+    max-height: 25px;
+    padding-top: 5px;
 }
